--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
     "start": "npx @11ty/eleventy --serve"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^3",
+    "@11ty/eleventy": "^3"
   }
 }
