--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "jessicaakerman.com",
   "version": "1.0.0",
   "scripts": {
@@ -6,7 +7,7 @@
     "start": "npx @11ty/eleventy --serve"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^3.1.0-beta.1",
+    "@11ty/eleventy": "^3",
     "@11ty/eleventy-img": "^6.0.2",
     "@11ty/eleventy-navigation": "^1.0.4",
     "@11ty/eleventy-plugin-rss": "^2.0.3",
@@ -16,5 +17,5 @@
     "prismjs": "^1.30.0",
     "zod": "^3.24.3",
     "zod-validation-error": "^3.4.0"
+    }
   }
-}
