--- a/src/package.json
+++ b/src/package.json
@@ -42,6 +42,7 @@
 		"@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
 		"cross-env": "^7.0.3",
 		"luxon": "^3.6.1",
+		"papaparse": "^5.5.2",
 		"prismjs": "^1.30.0",
 		"zod": "^3.24.3",
 		"zod-validation-error": "^3.4.0"
