--- a/src/package.json
+++ b/src/package.json
@@ -4,56 +4,56 @@
 	"description": "A starter repository for a blog web site using the Eleventy site generator.",
 	"type": "module",
 	"scripts": {
-	  "build": "npx @11ty/eleventy",
-	  "build-nocolor": "cross-env NODE_DISABLE_COLORS=1 npx @11ty/eleventy",
-	  "build-ghpages": "npx @11ty/eleventy --pathprefix=/eleventy-base-blog/",
-	  "start": "npx @11ty/eleventy --serve --quiet",
-	  "start-ghpages": "npx @11ty/eleventy --pathprefix=/eleventy-base-blog/ --serve --quiet",
-	  "debug": "cross-env DEBUG=Eleventy* npx @11ty/eleventy",
-	  "debugstart": "cross-env DEBUG=Eleventy* npx @11ty/eleventy --serve --quiet",
-	  "benchmark": "cross-env DEBUG=Eleventy:Benchmark* npx @11ty/eleventy",
-	  "import:wp": "node scripts/import-wp.js"
+		"build": "npx @11ty/eleventy",
+		"build-nocolor": "cross-env NODE_DISABLE_COLORS=1 npx @11ty/eleventy",
+		"build-ghpages": "npx @11ty/eleventy --pathprefix=/eleventy-base-blog/",
+		"start": "npx @11ty/eleventy --serve --quiet",
+		"start-ghpages": "npx @11ty/eleventy --pathprefix=/eleventy-base-blog/ --serve --quiet",
+		"debug": "cross-env DEBUG=Eleventy* npx @11ty/eleventy",
+		"debugstart": "cross-env DEBUG=Eleventy* npx @11ty/eleventy --serve --quiet",
+		"benchmark": "cross-env DEBUG=Eleventy:Benchmark* npx @11ty/eleventy",
+		"import:wp": "node scripts/import-wp.js"
 	},
 	"repository": {
-	  "type": "git",
-	  "url": "git://github.com/11ty/eleventy-base-blog.git"
+		"type": "git",
+		"url": "git://github.com/11ty/eleventy-base-blog.git"
 	},
 	"author": {
-	  "name": "Zach Leatherman",
-	  "email": "zachleatherman@gmail.com",
-	  "url": "https://zachleat.com/"
+		"name": "Zach Leatherman",
+		"email": "zachleatherman@gmail.com",
+		"url": "https://zachleat.com/"
 	},
 	"license": "MIT",
 	"engines": {
-	  "node": ">=18"
+		"node": ">=18"
 	},
 	"funding": {
-	  "type": "opencollective",
-	  "url": "https://opencollective.com/11ty"
+		"type": "opencollective",
+		"url": "https://opencollective.com/11ty"
 	},
 	"bugs": {
-	  "url": "https://github.com/11ty/eleventy-base-blog/issues"
+		"url": "https://github.com/11ty/eleventy-base-blog/issues"
 	},
 	"homepage": "https://github.com/11ty/eleventy-base-blog#readme",
 	"devDependencies": {
-	  "@11ty/eleventy": "^3.1.0-beta.1",
-	  "@11ty/eleventy-img": "^6.0.2",
-	  "@11ty/eleventy-navigation": "^1.0.4",
-	  "@11ty/eleventy-plugin-rss": "^2.0.3",
-	  "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
-	  "cross-env": "^7.0.3",
-	  "luxon": "^3.6.1",
-	  "papaparse": "^5.5.2",
-	  "prismjs": "^1.30.0",
-	  "zod": "^3.24.3",
-	  "zod-validation-error": "^3.4.0"
+		"@11ty/eleventy": "^3.1.0-beta.1",
+		"@11ty/eleventy-img": "^6.0.2",
+		"@11ty/eleventy-navigation": "^1.0.4",
+		"@11ty/eleventy-plugin-rss": "^2.0.3",
+		"@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
+		"cross-env": "^7.0.3",
+		"gray-matter": "^4.0.3",
+		"luxon": "^3.6.1",
+		"papaparse": "^5.5.2",
+		"prismjs": "^1.30.0",
+		"zod": "^3.24.3",
+		"zod-validation-error": "^3.4.0"
 	},
 	"dependencies": {
-	  "@sindresorhus/slugify": "^2.1.0",
-	  "@zachleat/heading-anchors": "^1.0.3",
-	  "decap-cms": "^3.6.2",
-	  "turndown": "^7.1.2",
-	  "xml2js": "^0.6.2"
+		"@sindresorhus/slugify": "^2.1.0",
+		"@zachleat/heading-anchors": "^1.0.3",
+		"decap-cms": "^3.6.2",
+		"turndown": "^7.1.2",
+		"xml2js": "^0.6.2"
 	}
-  }
-  
+}
